fix and clean code

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -148,5 +148,8 @@
   "MobileEditForm": {
     "updateButton": "Обновить",
     "NothingHasChanged": "Изменений нет!"
+  },
+  "developers": {
+    "team": "Команда разработчиков"
   }
 }
