--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -153,5 +153,8 @@
   "MobileEditForm": {
     "updateButton": "Update",
     "NothingHasChanged": "Nothing has changed!"
+  },
+  "developers": {
+    "team": "Developer team"
   }
 }
